[CLIENT] Add `vuex-class-component`

--- a/apps/client/src/app.component.html
+++ b/apps/client/src/app.component.html
@@ -25,9 +25,8 @@
     <v-spacer></v-spacer>
 
     <v-btn
-      href="https://github.com/vuetifyjs/vuetify/releases/latest"
-      target="_blank"
       text
+      @click="changeDarkMode"
     >
       <span class="mr-2">Latest Release</span>
       <v-icon>open_in_new</v-icon>
