--- a/apps/client/src/pages/home/home.component.html
+++ b/apps/client/src/pages/home/home.component.html
@@ -1,4 +1,35 @@
-<div class="home">
-  <img alt="Vue logo" src="../assets/logo.png">
-  <hello-world msg="Welcome to Your Vue.js App"></hello-world>
+<div>
+  <v-app-bar app>
+    <v-toolbar-title class="headline text-uppercase">
+      <span>Notesify: </span>
+      <span class="font-weight-light">A Notes taking app for Developers.</span>
+    </v-toolbar-title>
+    <v-spacer></v-spacer>
+    <v-btn
+      text
+      to="/login"
+    >
+      login
+    </v-btn>
+  </v-app-bar>
+  <div style="height: 1000px;">
+    <v-layout row>
+      <v-flex xs12>
+        <v-parallax
+          dark
+          height="600"
+          :src="require('../../assets/home-bg.jpg')"
+        >
+          <v-layout
+            align-center
+            column
+            justify-center
+          >
+            <h1 class="display-2 font-weight-thin mb-4">NOTESIFY</h1>
+            <h4 class="subheading">A Notes taking app for Developers.</h4>
+          </v-layout>
+        </v-parallax>
+      </v-flex>
+    </v-layout>
+  </div>
 </div>
