--- a/apps/client/src/app.component.html
+++ b/apps/client/src/app.component.html
@@ -1,39 +1,5 @@
 <v-app>
-  <v-app-bar
-    app
-    color="primary"
-    dark
-  >
-    <div class="d-flex align-center">
-      <v-img
-        alt="Vuetify Logo"
-        class="shrink mr-2"
-        contain
-        src="https://cdn.vuetifyjs.com/images/logos/vuetify-logo-dark.png"
-        transition="scale-transition"
-        width="40"></v-img>
-
-      <v-img
-        alt="Vuetify Name"
-        class="shrink mt-1 hidden-sm-and-down"
-        contain
-        min-width="100"
-        src="https://cdn.vuetifyjs.com/images/logos/vuetify-name-dark.png"
-        width="100"></v-img>
-    </div>
-
-    <v-spacer></v-spacer>
-
-    <v-btn
-      text
-      @click="changeDarkMode"
-    >
-      <span class="mr-2">Latest Release</span>
-      <v-icon>open_in_new</v-icon>
-    </v-btn>
-  </v-app-bar>
-
   <v-content>
-    <hello-world></hello-world>
+    <router-view></router-view>
   </v-content>
 </v-app>
