[CLIENT] Refactor `home.component`

--- a/apps/client/src/pages/start/home/home.component.html
+++ b/apps/client/src/pages/start/home/home.component.html
@@ -1,24 +1,11 @@
 <div>
-  <v-app-bar app>
-    <v-toolbar-title class="headline text-uppercase">
-      <span>Notesify: </span>
-      <span class="font-weight-light">A Notes taking app for Developers.</span>
-    </v-toolbar-title>
-    <v-spacer></v-spacer>
-    <v-btn
-      text
-      to="/login"
-    >
-      login
-    </v-btn>
-  </v-app-bar>
   <div style="height: 1000px;">
     <v-layout row>
       <v-flex xs12>
         <v-parallax
           dark
           height="600"
-          :src="require('../../assets/home-bg.jpg')"
+          :src="require('../../../assets/home-bg.jpg')"
         >
           <v-layout
             align-center
