[CLIENT] Refactor `AuthenticationModule`

--- a/apps/client/src/pages/start/authentication/password-reset/password-reset/password-reset.component.html
+++ b/apps/client/src/pages/start/authentication/password-reset/password-reset/password-reset.component.html
@@ -6,28 +6,11 @@
     flat
   >
     <v-layout justify-center="">
-      <v-toolbar-title class="authentication__container--title">REGISTER</v-toolbar-title>
+      <v-toolbar-title class="authentication__container--title">RESET PASSWORD</v-toolbar-title>
     </v-layout>
   </v-toolbar>
   <v-card-text>
     <v-form>
-      <v-text-field
-        label="Enter E-Mail"
-        prepend-inner-icon="person"
-        type="text"
-        outlined
-        rounded
-        v-model="email"
-        :disabled="waitingForServer"
-        :error-messages="emailErrors"
-        @input="emailOnInput"
-        @blur="$v.email.$touch()"
-        :solo="!appStore.appDarkMode"
-        :solo-inverted="appStore.appDarkMode"
-        autofocus
-        flat
-      ></v-text-field>
-
       <v-text-field
         label="Enter Password"
         prepend-inner-icon="lock"
@@ -79,11 +62,11 @@
         :loading="waitingForServer"
         :small="waitingForServer"
         :large="!waitingForServer"
-        @click="register"
+        @click="resetPassword"
         depressed
         :disabled="$v.$invalid"
       >
-        Register
+        reset password
       </v-btn>
     </v-layout>
   </v-card-actions>
@@ -97,44 +80,6 @@
   >
     {{ alert.message }}
   </v-alert>
-  <v-card-actions class="pa-3">
-    <v-flex
-      md6
-      xs12
-      class="pr-1"
-    >
-      <v-btn
-        rounded
-        color="primary"
-        outlined
-        block
-        large
-        :disabled="waitingForServer"
-        depressed
-      >
-        connect with
-        <v-icon right>person</v-icon>
-      </v-btn>
-    </v-flex>
-    <v-flex
-      md6
-      xs12
-      class="pl-1"
-    >
-      <v-btn
-        rounded
-        color="primary"
-        outlined
-        block
-        large
-        :disabled="waitingForServer"
-        depressed
-      >
-        connect with
-        <v-icon right>person</v-icon>
-      </v-btn>
-    </v-flex>
-  </v-card-actions>
   <v-layout
     justify-center
     class="pt-5"
