--- a/apps/client/src/pages/start/authentication/login/login.component.html
+++ b/apps/client/src/pages/start/authentication/login/login.component.html
@@ -1,144 +1,126 @@
-<div
-  class="authentication__container"
+<v-card
+  class="elevation-12"
+  :loading="waitingForServer"
 >
-  <v-container
-    fluid
-    fill-height
+  <v-toolbar
+    flat
   >
+    <v-layout justify-center="">
+      <v-toolbar-title class="authentication__container--title">LOGIN</v-toolbar-title>
+    </v-layout>
+  </v-toolbar>
+  <v-card-text>
+    <v-form>
+      <v-text-field
+        label="E-Mail"
+        prepend-inner-icon="person"
+        type="text"
+        outlined
+        rounded
+        v-model="email"
+        :disabled="waitingForServer"
+        :error-messages="emailErrors"
+        @input="emailOnInput"
+        @blur="$v.email.$touch()"
+        :solo="!appStore.appDarkMode"
+        :solo-inverted="appStore.appDarkMode"
+        autofocus
+        flat
+      ></v-text-field>
+
+      <v-text-field
+        label="Password"
+        prepend-inner-icon="lock"
+        outlined
+        rounded
+        v-model="password"
+        :disabled="waitingForServer"
+        @input="alert.state = false"
+        :append-icon="showPassword ? 'visibility' : 'visibility_off'"
+        :type="showPassword ? 'text' : 'password'"
+        @click:append="showPassword = !showPassword"
+        :solo="!appStore.appDarkMode"
+        :solo-inverted="appStore.appDarkMode"
+        flat
+      ></v-text-field>
+    </v-form>
+  </v-card-text>
+  <v-card-actions>
     <v-layout
       align-center
       justify-center
     >
-      <v-flex
-        xs12
-        sm8
-        md4
+      <v-btn
+        color="primary"
+        :block="!waitingForServer"
+        :rounded="!waitingForServer"
+        ripple
+        :fab="waitingForServer"
+        :loading="waitingForServer"
+        :small="waitingForServer"
+        :large="!waitingForServer"
+        @click="login"
+        depressed
+        :disabled="$v.$invalid"
       >
-        <v-card class="elevation-12">
-          <v-toolbar
-            flat
-          >
-            <v-layout justify-center="">
-              <v-toolbar-title class="authentication__container--title">LOGIN</v-toolbar-title>
-            </v-layout>
-          </v-toolbar>
-          <v-card-text>
-            <v-form>
-              <v-text-field
-                label="E-Mail"
-                prepend-inner-icon="person"
-                type="text"
-                outlined
-                rounded
-                v-model="email"
-                :disabled="waitingForServer"
-                :error-messages="emailErrors"
-                @input="emailOnInput"
-                @blur="$v.email.$touch()"
-                :solo="!appStore.appDarkMode"
-                :solo-inverted="appStore.appDarkMode"
-                autofocus
-                flat
-              ></v-text-field>
-
-              <v-text-field
-                label="Password"
-                prepend-inner-icon="lock"
-                outlined
-                rounded
-                v-model="password"
-                :disabled="waitingForServer"
-                @input="alert.state = false"
-                :append-icon="showPassword ? 'visibility' : 'visibility_off'"
-                :type="showPassword ? 'text' : 'password'"
-                @click:append="showPassword = !showPassword"
-                :solo="!appStore.appDarkMode"
-                :solo-inverted="appStore.appDarkMode"
-                flat
-              ></v-text-field>
-            </v-form>
-          </v-card-text>
-          <v-card-actions>
-            <v-layout
-              align-center
-              justify-center
-            >
-              <v-btn
-                color="primary"
-                :block="!waitingForServer"
-                :rounded="!waitingForServer"
-                ripple
-                :fab="waitingForServer"
-                :loading="waitingForServer"
-                :small="waitingForServer"
-                :large="!waitingForServer"
-                @click="login"
-                depressed
-                :disabled="$v.$invalid"
-              >
-                Login
-              </v-btn>
-            </v-layout>
-          </v-card-actions>
-          <v-alert
-            :value="alert.state"
-            color="red"
-            dark
-            border="top"
-            icon="priority_high"
-            transition="slide-y-transition"
-          >
-            {{ alert.message }}
-          </v-alert>
-          <v-card-actions class="pa-3">
-            <v-flex
-              md6
-              xs12
-              class="pr-1"
-            >
-              <v-btn
-                rounded
-                color="primary"
-                outlined
-                block
-                large
-                :disabled="waitingForServer"
-                depressed
-              >
-                connect with
-                <v-icon right>person</v-icon>
-              </v-btn>
-            </v-flex>
-            <v-flex
-              md6
-              xs12
-              class="pl-1"
-            >
-              <v-btn
-                rounded
-                color="primary"
-                outlined
-                block
-                large
-                :disabled="waitingForServer"
-                depressed
-              >
-                connect with
-                <v-icon right>person</v-icon>
-              </v-btn>
-            </v-flex>
-          </v-card-actions>
-          <v-layout
-            justify-center
-            class="pt-5"
-          >
-            <p>New to Notesify?
-              <v-btn depressed rounded :disabled="waitingForServer" to="/start/register">register</v-btn>
-            </p>
-          </v-layout>
-        </v-card>
-      </v-flex>
+        Login
+      </v-btn>
     </v-layout>
-  </v-container>
-
-</div>
+  </v-card-actions>
+  <v-alert
+    :value="alert.state"
+    color="red"
+    dark
+    border="top"
+    icon="priority_high"
+    transition="slide-y-transition"
+  >
+    {{ alert.message }}
+  </v-alert>
+  <v-card-actions class="pa-3">
+    <v-flex
+      md6
+      xs12
+      class="pr-1"
+    >
+      <v-btn
+        rounded
+        color="primary"
+        outlined
+        block
+        large
+        :disabled="waitingForServer"
+        depressed
+      >
+        connect with
+        <v-icon right>person</v-icon>
+      </v-btn>
+    </v-flex>
+    <v-flex
+      md6
+      xs12
+      class="pl-1"
+    >
+      <v-btn
+        rounded
+        color="primary"
+        outlined
+        block
+        large
+        :disabled="waitingForServer"
+        depressed
+      >
+        connect with
+        <v-icon right>person</v-icon>
+      </v-btn>
+    </v-flex>
+  </v-card-actions>
+  <v-layout
+    justify-center
+    class="pt-5"
+  >
+    <p>New to Notesify?
+      <v-btn depressed rounded :disabled="waitingForServer" to="/start/auth?mode=register">register</v-btn>
+    </p>
+  </v-layout>
+</v-card>
