--- a/apps/client/src/pages/start/start.component.html
+++ b/apps/client/src/pages/start/start.component.html
@@ -17,7 +17,7 @@
     </v-btn>
     <v-btn
       text
-      to="/start/login"
+      to="/start/auth?mode=login"
     >
       login
     </v-btn>
